--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,11 +3,26 @@ AllCops:
   SuggestExtensions: false
   TargetRubyVersion: 3.0
 
+Metrics/BlockLength:
+  Enabled: false
+
 Metrics/ClassLength:
-  Max: 500
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
 
 Metrics/MethodLength:
-  Max: 50
+  Enabled: false
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
